--- a/booking.html
+++ b/booking.html
@@ -6,10 +6,10 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <!-- link css -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link href="assets/css/style.css?v=1676951130000" rel="stylesheet" />
-    <link href="assets/css/form.min.css?v=1676951130000" rel="stylesheet" />
-    <link href="assets/css/booking.css?v=1676951130000" rel="stylesheet" />
-    <link href="assets/css/buss.css?v=1676951130000" rel="stylesheet" />
+    <link href="assets/css/style.css?v=1677045054901" rel="stylesheet" />
+    <link href="assets/css/form.min.css?v=1677045054901" rel="stylesheet" />
+    <link href="assets/css/booking.css?v=1677045054901" rel="stylesheet" />
+    <link href="assets/css/buss.css?v=1677045054901" rel="stylesheet" />
     <link href="assets/swal/sweetalert2.min.css" rel="stylesheet" />
 
     <!-- unicons -->
@@ -445,7 +445,7 @@
                             </div>
                         </div>
 
-                        <div class=" bus-body table-responsive border border-2 rounded-pill-top rounded-bottom p-4">
+                        <div class=" bus-body table-responsive border border-2 rounded-pill-top rounded-bottom p-4 shadow">
                         </div>
                     </div>
                     <div class="block passenger-s" id="passenger-block">
@@ -569,7 +569,7 @@
 
 
 
-                <!-- edit booking unser info modal --> -->
+                <!-- edit booking unser info modal -->
                 <div class="edit-booked-user-info-modal">
                     <form class="edit-booked-user-info" id="pass-info" onsubmit="EditInfo(event)">
                         <h3>Edit info</h3>
@@ -695,9 +695,9 @@
     <script rel="script" src="assets/js/lodash.min.js"></script>
     <script rel="script" src="assets/swal/sweetalert2.min.js"></script>
     <script rel="script" src="assets/js/moment.min.js"></script>
-    <script async rel="script" src="assets/js/app.js?v=1676951130000"></script>
-    <script async rel="script" src="assets/js/booking.js?v=1676951130000"></script>
-    <script async rel="script" src="assets/js/main.js?v=1676951130000"></script>
+    <script async rel="script" src="assets/js/app.js?v=1677045054901"></script>
+    <script async rel="script" src="assets/js/booking.js?v=1677045054901"></script>
+    <script async rel="script" src="assets/js/main.js?v=1677045054901"></script>
 
     <script>
         $("#chkReturn").change(function () {
