--- a/user-admin.html
+++ b/user-admin.html
@@ -7,9 +7,9 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <!-- link css -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link href="assets/css/style.css?v=1676951130000" rel="stylesheet" />
-    <link href="assets/css/admin.min.css?v=1676951130000" rel="stylesheet" />
-    <link href="assets/css/table.min.css?v=1676951130000" rel="stylesheet" />
+    <link href="assets/css/style.css?v=1677045054901" rel="stylesheet" />
+    <link href="assets/css/admin.min.css?v=1677045054901" rel="stylesheet" />
+    <link href="assets/css/table.min.css?v=1677045054901" rel="stylesheet" />
     <!-- unicons -->
     <link href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" rel="stylesheet" />
 
@@ -209,8 +209,8 @@
     <script rel="script" src="assets/js/axios.min.js"></script>
     <script rel="script" src="assets/js/table.min.js"></script>
     <script rel="script" src="assets/js/moment.min.js"></script>
-    <script rel="script" src="assets/js/app.js?v=1676951130000"></script>
-    <script rel="script" src="assets/js/main.js?v=1676951130000"></script>
+    <script rel="script" src="assets/js/app.js?v=1677045054901"></script>
+    <script rel="script" src="assets/js/main.js?v=1677045054901"></script>
 
     <script>
             let loginInfo = JSON.parse(localStorage.getItem('loginInfo'));
@@ -231,7 +231,7 @@
 
         async function fetchUpdateProfile(data) {
             let input = `https://iwsenterprise.com/iwsticketing_v3/iwsapiengine/updateonlineuser`;
-            console.log(JSON.stringify(data))
+            //console.log(JSON.stringify(data))
             let response = await fetch(input, {
                 headers: {
                     'Content-Type': 'application/json; charset=utf-8'
@@ -254,7 +254,7 @@
                 contactNo: $('#contact').val(),
                 gender: "M"
             }
-            console.log('userdata', data);
+            //console.log('userdata', data);
             fetchUpdateProfile(data)
                 .then((res) => {
                     if (res.RESULT === 'SAVED') {
@@ -277,7 +277,7 @@
                 })
                 .catch(error => {
                     editProfile.classList.remove("active");
-                    //console.log(error);
+                    console.log(error);
                 })
         })
     </script>
