--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <!-- link css -->
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-  <link href="assets/css/style.css?v=1677114496196" rel="stylesheet" />
+  <link href="assets/css/style.css?v=1677562219053" rel="stylesheet" />
   <link href="assets/css/form.min.css" rel="stylesheet" />
   <title>IWantSeats</title>
   <link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png" />
@@ -106,10 +106,11 @@
     </div>
   </div>
   <script rel="script" src="assets/js/jquery.min.js"></script>
+  <script rel="script" src="assets/js/loadingoverlay.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script rel="script" src="assets/js/axios.min.js"></script>1676463490861
   <script rel="script" src="assets/swal/sweetalert2.all.js"></script>
-  <script rel="script" src="assets/js/app.js?v=1677114496196"></script>
+  <script rel="script" src="assets/js/app.js?v=1677562219053"></script>
 
   <script>
     let axiosConfig = {
@@ -117,6 +118,12 @@
         "Content-Type": "application/json;charset=UTF-8",
       },
     };
+
+    $.LoadingOverlaySetup({
+      imageColor: "#4a6c2f"
+    });
+
+
 
     document.addEventListener("DOMContentLoaded", () => {
       let token = localStorage.getItem("TOKEN");
@@ -167,6 +174,8 @@
 
     const SubmitForm = (e) => {
       e.preventDefault();
+      $('#login').LoadingOverlay('show');
+
       let data = {
         email: document.getElementById("email").value,
         pwd: document.getElementById("password").value,
@@ -186,9 +195,10 @@
         .then((resp) => resp.json())
         .then((row) => {
           //console.log(row);
+          $('#login').LoadingOverlay('hide');
           if (row["RESULT"] === "INACTIVE") {
-            Swal.fire(
-              "Your Account is INACTIVE. Please check your registered email to activate."
+            Swal.fire('ACCOUNT INACTIVE',
+              "Please verify your e-mail address to access your account"
             );
           } else if (row["RESULT"] === "OK") {
             localStorage.setItem("loginInfo", JSON.stringify(data));
