--- a/signup.html
+++ b/signup.html
@@ -7,8 +7,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <!-- link css -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link href="assets/css/style.css?v=1677562219053" rel="stylesheet" />
-    <link href="assets/css/form.min.css?v=1677562219053" rel="stylesheet" />
+    <link href="assets/css/style.css?v=1678075219283" rel="stylesheet" />
+    <link href="assets/css/form.min.css?v=1678075219283" rel="stylesheet" />
     <link href="assets/swal/sweetalert2.min.css" rel="stylesheet" />
 
     <!-- unicons -->
@@ -64,7 +64,7 @@
                 <div class="row">
                     <div class="fild">
                         <i class="uil uil-phone"></i>
-                        <input id="contact_number" name="contact_number" placeholder="Phone number" required
+                        <input id="contact_number" name="contact_number" placeholder="Phone number"
                             type="contact_number" />
                     </div>
                     <div class="fild">
@@ -180,7 +180,7 @@
     <script rel="script" src="assets/js/loadingoverlay.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script rel="script" src="assets/swal/sweetalert2.min.js"></script>
-    <script rel="script" src="assets/js/app.js?v=1677562219053"></script>
+    <script rel="script" src="assets/js/app.js?v=1678075219283"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             let token = localStorage.getItem('TOKEN');
