--- a/booking.html
+++ b/booking.html
@@ -6,10 +6,10 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <!-- link css -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link href="assets/css/style.css?v=1678075219283" rel="stylesheet" />
-    <link href="assets/css/form.min.css?v=1678075219283" rel="stylesheet" />
-    <link href="assets/css/booking.css?v=1678075219283" rel="stylesheet" />
-    <link href="assets/css/buss.css?v=1678075219283" rel="stylesheet" />
+    <link href="assets/css/style.css?v=1678148521536" rel="stylesheet" />
+    <link href="assets/css/form.min.css?v=1678148521536" rel="stylesheet" />
+    <link href="assets/css/booking.css?v=1678148521536" rel="stylesheet" />
+    <link href="assets/css/buss.css?v=1678148521536" rel="stylesheet" />
     <link href="assets/swal/sweetalert2.min.css" rel="stylesheet" />
 
     <!-- unicons -->
@@ -46,11 +46,24 @@
             border-radius: 50px 50px;
         }
 
+        .loaderImg{
+            background: #fff url(./assets/images/bus.gif) no-repeat scroll 50% 50%;
+            height: 100%;
+            left: 0;
+            top: 0;
+            position: fixed;
+            width: 100%;
+            z-index: 999999!important;
+        }
+
+
+
         
     </style>
 </head>
 
 <body>
+    <div class="loaderImg"></div>
     <header>
         <div class="container-max">
             <div class="logo">
@@ -527,11 +540,15 @@
 
                     <button class="btn pay-con continue btn-primary fs-4" disabled onclick="continuePayment()">
                         <i class="uil uil-credit-card"></i>
-                        Continue Booking
+                        Done Booking
                     </button>
                     <button class="btn cancel-btn btn-sm fs-4 btn-danger p-3" onclick="closeModal()">
                         Cancel Booking
                     </button>
+                    <a href="./user-admin.html" style="background-color: var(--green);" class="btn continue active btn-primary fs-4 mt-2 btn-history">
+                        <i class="uil uil-notes"></i>
+                        View Booking History
+                    </a>
                 </div>
                 <!-- bus seat planing and mobile modal end -->
 
@@ -588,7 +605,7 @@
                             <div class="fild">
                                 <i class="uil uil-phone"></i>
                                 <input id="contact_number" name="contact_number" placeholder="Phone number"
-                                    type="contact_number" required />
+                                    type="contact_number" required minlength="11" />
                             </div>
                             <div class="fild">
                                 <i class="uil uil-envelope-alt"></i>
@@ -695,9 +712,9 @@
     <script rel="script" src="assets/js/lodash.min.js"></script>
     <script rel="script" src="assets/swal/sweetalert2.min.js"></script>
     <script rel="script" src="assets/js/moment.min.js"></script>
-    <script async rel="script" src="assets/js/app.js?v=1678075219283"></script>
-    <script async rel="script" src="assets/js/booking.js?v=1678075219283"></script>
-    <script async rel="script" src="assets/js/main.js?v=1678075219283"></script>
+    <script async rel="script" src="assets/js/app.js?v=1678148521536"></script>
+    <script async rel="script" src="assets/js/booking.js?v=1678148521536"></script>
+    <script async rel="script" src="assets/js/main.js?v=1678148521536s075219283"></script>
 
     <script>
         $("#chkReturn").change(function () {
