--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 	<!-- link css -->
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-	<link href="assets/css/style.css?v=1678168004183" rel="stylesheet" />
+	<link href="assets/css/style.css?v=1678338271293" rel="stylesheet" />
 	<link href="assets/css/form.min.css" rel="stylesheet" />
 	<title>IWantSeats</title>
 	<link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png" />
@@ -63,10 +63,7 @@
 
 	<main>
 		<div class="w-100 position-absolute px-2 py-4 text-center annouce px-md-5">
-			<h4 class="text-white s-announce">Welcome to the new iWantSeats version 10! You may book here or <a
-					style="text-decoration: underline;" class="text-white " href="https://www.iwantseats.com/">switch to the
-					old
-					version</a>, whichever is convenient. We appreciate your feedback.<br /> Please feel free to email
+			<h4 class="text-white s-announce">Welcome to the new iWantSeats version 10!. We appreciate your feedback.<br /> Please feel free to email
 				us at
 				<a class="text-white" style="text-decoration: none;"
 					href="mailto:notifications@iwantseats.com">notifications@iwantseats.com</a>
@@ -598,8 +595,8 @@
 	<script rel="script" src="assets/js/lodash.min.js"></script>
 	<script rel="script" src="assets/swal/sweetalert2.min.js"></script>
 	<script rel="script" src="assets/js/loadingoverlay.min.js"></script>
-	<script async rel="script" src="assets/js/app.js?v=1678168004183"></script>
-	<script async rel="script" src="assets/js/main.js?v=1678168004183"></script>
+	<script async rel="script" src="assets/js/app.js?v=1678338271293"></script>
+	<script async rel="script" src="assets/js/main.js?v=1678338271293"></script>
 	<script>
 		$("#chkReturn").change(function () {
 			if (this.checked) {
