--- a/signup.html
+++ b/signup.html
@@ -7,8 +7,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <!-- link css -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link href="assets/css/style.css?v=1678338271293" rel="stylesheet" />
-    <link href="assets/css/form.min.css?v=1678338271293" rel="stylesheet" />
+    <link href="assets/css/style.css?v=1678760002456" rel="stylesheet" />
+    <link href="assets/css/form.min.css?v=1678760002456" rel="stylesheet" />
     <link href="assets/swal/sweetalert2.min.css" rel="stylesheet" />
 
     <!-- unicons -->
@@ -180,7 +180,7 @@
     <script rel="script" src="assets/js/loadingoverlay.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script rel="script" src="assets/swal/sweetalert2.min.js"></script>
-    <script rel="script" src="assets/js/app.js?v=1678338271293"></script>
+    <script rel="script" src="assets/js/app.js?v=1678760002456"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             let token = localStorage.getItem('TOKEN');
@@ -205,8 +205,9 @@
                 lastName: document.querySelector('#last_name').value,
                 gender: document.querySelector("input[name='gender']:checked").value,
                 birthDate: document.querySelector('#birthday').value,
-                contactNo: document.querySelector('#contact_number').value
+                contactNo: document.querySelector('#contact_number').value ?? ''
             };
+            console.log('sign_up post', account);
             let baseURL = 'https://iwsenterprise.com/iwsticketing_v3/iwsapiengine/register_online_user';
             fetch(baseURL, {
                 headers: {
