--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 	<!-- link css -->
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-	<link href="assets/css/style.css?v=1678760002456" rel="stylesheet" />
+	<link href="assets/css/style.css?v=1679036334782" rel="stylesheet" />
 	<link href="assets/css/form.min.css" rel="stylesheet" />
 	<title>IWantSeats</title>
 	<link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png" />
 	<link href="assets/swal/sweetalert2.min.css" rel="stylesheet" />
 
 	<!-- unicons -->
-	<link href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" rel="stylesheet" />
+	<link href="assets/fonts/fontawesome-all.min.css" rel="stylesheet" />
+	<!-- <link href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" rel="stylesheet" /> -->
 	<style>
 		.annouce {
 			z-index: 99;
@@ -56,8 +57,7 @@
 				<div class="status"></div>
 			</div>
 			<div class="menu" onclick="menu()">
-				<i class="uil uil-align-center-alt"></i>
-			</div>
+				<i class="fas fa-bars"></i>									</div>
 		</div>
 	</header>
 
@@ -88,10 +88,10 @@
 					<div class="search-fild drop-box">
 						<label for="from">From</label>
 						<div class="input from-input">
-							<i class="uil uil-search search-ic"></i>
+							<i class="fas fa-search" style="display: none;"></i>
 							<input autocomplete="off" class="from-value" id="from" name="from"
 								oninput="getLocation(this.value)" placeholder="Your location" required />
-							<i class="uil uil-map-marker"></i>
+							<i class="fas fa-map-marker-alt"></i>
 						</div>
 						<div class="dropdown">
 							<div class="item from-locations"></div>
@@ -100,10 +100,10 @@
 					<div class="search-fild drop-box">
 						<label for="to">To</label>
 						<div class="input to-input">
-							<i class="uil uil-search search-ic"></i>
+							<i class="fas fa-search" style="display: none;"></i>
 							<input autocomplete="off" class="to-value" id="to" oninput="getDestination(this.value)"
 								placeholder="Travel location" required />
-							<i class="uil uil-location-arrow"></i>
+							<i class="fas fa-location-arrow"></i>
 						</div>
 						<div class="dropdown">
 							<div class="item to-locations"></div>
@@ -113,7 +113,7 @@
 						<label for="passenger">Passengers</label>
 						<div class="input">
 							<input id="passenger" required type="number" value="1" />
-							<i class="uil uil-users-alt"></i>
+							<i class="fas fa-user"></i>
 						</div>
 					</div>
 					<div class="search-fild">
@@ -121,7 +121,7 @@
 						<div class="input">
 							<input id="date_of_departure" onchange="this.className=(this.value!=''?'has-value':'')"
 								required type="date" onfocus="this.showPicker()" />
-							<label for="date_of_departure"><i class="uil uil-calendar-alt"></i></label>
+							<label for="date_of_departure"><i class="fas fa-calendar"></i></label>
 						</div>
 					</div>
 					<!-- <div class="search-fild">
@@ -132,11 +132,11 @@
 						<div class="input">
 							<input disabled id="date_of_return" name="date_of_return"
 								onchange="this.className=(this.value!=''?'has-value':'')" type="date" />
-							<i class="uil uil-calendar-alt"></i>
+							<i class="fas fa-calendar"></i>
 						</div>
 					</div> -->
 					<button class="btn-primary search-btn" id="btn_search">
-						<i class="uil uil-search"></i> Search
+						<i class="fas fa-search"></i> Search
 					</button>
 				</div>
 			</form>
@@ -153,10 +153,10 @@
 					<div class="search-fild drop-box">
 						<label for="from">Route</label>
 						<div class="input from-input">
-							<i class="uil uil-search search-ic"></i>
+							<i class="fas fa-search" style="display: none;"></i>
 							<input autocomplete="off" id="routeF" name="routeF"
 								oninput="getLocation(this.value)" placeholder="Route Featured" required />
-							<i class="uil uil-map-marker"></i>
+							<i class="fas fa-map-marker-alt"></i>
 						</div>
 						<div class="dropdown">
 							<div class="item from-locationsF"></div>
@@ -165,10 +165,10 @@
 
 					<!-- <label for="from">From</label>
 					<div class="input from-input">
-						<i class="uil uil-search search-ic"></i>
+						<i class="fas fa-search"></i>
 						<input autocomplete="off" class="from-value" id="from" name="from"
 							oninput="getLocation(this.value)" placeholder="Your location" required />
-						<i class="uil uil-map-marker"></i>
+						<i class="fas fa-map-marker-alt"></i>
 					</div>
 					<div class="dropdown">
 						<div class="item from-locations"></div>
@@ -179,14 +179,14 @@
 						<div class="input">
 							<input id="date_of_departureF" onchange="this.className=(this.value!=''?'has-value':'')"
 								required type="date" onfocus="this.showPicker()" />
-							<label for="date_of_departureF"><i class="uil uil-calendar-alt"></i></label>
+							<label for="date_of_departureF"><i class="fas fa-calendar"></i></label>
 						</div>
 					</div>
 					<div class="search-fild">
 						<label for="passengerF">Passengers</label>
 						<div class="input">
 							<input id="passengerF" required type="number" value="1" />
-							<i class="uil uil-users-alt"></i>
+							<i class="fas fa-user"></i>
 						</div>
 					</div>
 					<!-- <div class="search-fild">
@@ -197,11 +197,11 @@
 						<div class="input">
 							<input disabled id="date_of_return" name="date_of_return"
 								onchange="this.className=(this.value!=''?'has-value':'')" type="date" />
-							<i class="uil uil-calendar-alt"></i>
+							<i class="fas fa-calendar"></i>
 						</div>
 					</div> -->
 					<button class="btn-primary search-btn">
-						<i class="uil uil-search"></i> Search
+						<i class="fas fa-search"></i> Search
 					</button>
 				</div>
 			</form>
@@ -359,7 +359,7 @@
 					<div class="faq">
 						<div class="question">
 							How does iWantSeats work?
-							<i class="uil uil-arrow-circle-down"></i>
+							<i class="fas fa-arrow-circle-down"></i>
 						</div>
 						<div class="answer">
 							<p>
@@ -372,7 +372,7 @@
 					<div class="faq">
 						<div class="question">
 							How much is the fee to book our bus ticket on iWantSeats?
-							<i class="uil uil-arrow-circle-down"></i>
+							<i class="fas fa-arrow-circle-down"></i>
 						</div>
 						<div class="answer">
 							<p>
@@ -384,7 +384,7 @@
 					<div class="faq">
 						<div class="question">
 							When should I pay for my transaction?
-							<i class="uil uil-arrow-circle-down"></i>
+							<i class="fas fa-arrow-circle-down"></i>
 						</div>
 						<div class="answer">
 							<p>
@@ -398,7 +398,7 @@
 					<div class="faq">
 						<div class="question">
 							Can I rebook or cancel my booking?
-							<i class="uil uil-arrow-circle-down"></i>
+							<i class="fas fa-arrow-circle-down"></i>
 						</div>
 						<div class="answer">
 							<p>
@@ -415,7 +415,7 @@
 					<div class="faq">
 						<div class="question">
 							How early should I be at the terminal?
-							<i class="uil uil-arrow-circle-down"></i>
+							<i class="fas fa-arrow-circle-down"></i>
 						</div>
 						<div class="answer">
 							<p>
@@ -544,18 +544,18 @@
 			<form id="contactForm" class="contact-form">
 				<div class="row">
 					<div class="fild">
-						<i class="uil uil-user"></i>
+						<i class="fas fa-user"></i>
 						<input name="name" placeholder="Name" type="text" required />
 					</div>
 					<div class="fild">
-						<i class="uil uil-envelope"></i>
+						<i class="fas fa-envelope"></i>
 						<input name="email" placeholder="Email" type="email" required />
 					</div>
 				</div>
 				<textarea id="" required name="message" placeholder="Type your message...."></textarea>
 
 				<button class="btn signup fs-4" type="submit">
-					Send <i class="uil uil-message"></i>
+					Send <i class="fas fa-paper-plane"></i>
 				</button>
 			</form>
 		</div>
@@ -661,8 +661,8 @@
 	<script rel="script" src="assets/js/lodash.min.js"></script>
 	<script rel="script" src="assets/swal/sweetalert2.min.js"></script>
 	<script rel="script" src="assets/js/loadingoverlay.min.js"></script>
-	<script async rel="script" src="assets/js/app.js?v=1678760002456"></script>
-	<script async rel="script" src="assets/js/main.js?v=1678760002456"></script>
+	<script async rel="script" src="assets/js/app.js?v=1679036334782"></script>
+	<script async rel="script" src="assets/js/main.js?v=1679036334782"></script>
 	<script>
 		$("#chkReturn").change(function () {
 			if (this.checked) {
