--- a/joybus.html
+++ b/joybus.html
@@ -7,16 +7,17 @@
     <!-- link css -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <link href="assets/css/style.css" rel="stylesheet"/>
-    <link href="assets/css/style.css?v=1678760002456" rel="stylesheet" />
+    <link href="assets/css/style.css?v=1679036334782" rel="stylesheet" />
     <link href="assets/css/oparator.min.css" rel="stylesheet"/>
     <link href="assets/css/table.min.css" rel="stylesheet"/>
 	<link href="assets/swal/sweetalert2.min.css" rel="stylesheet" />
 
     <!-- unicons -->
-    <link
+    <link href="assets/fonts/fontawesome-all.min.css" rel="stylesheet" />
+    <!-- <link
             href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
             rel="stylesheet"
-    />
+    /> -->
     <title>IWantSeats - Genesis Transport and Joybus</title>
     <link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png">
 </head>
@@ -33,7 +34,7 @@
 				<div class="status"></div>
 			</div>
 			<div class="menu" onclick="menu()">
-				<i class="uil uil-align-center-alt"></i>
+				<i class="fas fa-bars"></i>
 			</div>
 		</div>
 	</header>
@@ -56,10 +57,10 @@
                 <div class="search-fild drop-box">
                     <label for="from">From</label>
                     <div class="input from-input">
-                        <i class="uil uil-search search-ic"></i>
+                        <i class="fas fa-search" style="display: none;"></i>
                         <input autocomplete="off" class="from-value" id="from" name="from"
                             oninput="getLocation(this.value)" placeholder="Your location" required />
-                        <i class="uil uil-map-marker"></i>
+                        <i class="fas fa-map-marker-alt"></i>
                     </div>
                     <div class="dropdown">
                         <div class="item from-locations"></div>
@@ -68,10 +69,10 @@
                 <div class="search-fild drop-box">
                     <label for="to">To</label>
                     <div class="input to-input">
-                        <i class="uil uil-search search-ic"></i>
+                        <i class="fas fa-search" style="display: none;"></i>
                         <input autocomplete="off" class="to-value" id="to" oninput="getDestination(this.value)"
                             placeholder="Travel location" required />
-                        <i class="uil uil-location-arrow"></i>
+                        <i class="fas fa-location-arrow"></i>
                     </div>
                     <div class="dropdown">
                         <div class="item to-locations"></div>
@@ -81,7 +82,7 @@
                     <label for="from">Passengers</label>
                     <div class="input">
                         <input id="passenger" required type="number" value="1" />
-                        <i class="uil uil-users-alt"></i>
+                        <i class="fas fa-user"></i>
                     </div>
                 </div>
                 <div class="search-fild">
@@ -89,7 +90,7 @@
                     <div class="input">
                         <input id="date_of_departure" onchange="this.className=(this.value!=''?'has-value':'')"
                             required type="date" onfocus="this.showPicker()" />
-                        <label for="date_of_departure"><i class="uil uil-calendar-alt"></i></label>
+                        <label for="date_of_departure"><i class="fas fa-calendar"></i></label>
                     </div>
                 </div>
                 <!-- <div class="search-fild">
@@ -100,11 +101,11 @@
                     <div class="input">
                         <input disabled id="date_of_return" name="date_of_return"
                             onchange="this.className=(this.value!=''?'has-value':'')" type="date" />
-                        <i class="uil uil-calendar-alt"></i>
+                        <i class="fas fa-calendar"></i>
                     </div>
                 </div> -->
                 <button class="btn-primary search-btn" id="btn_search">
-                    <i class="uil uil-search"></i> Search
+                    <i class="fas fa-search"></i> Search
                 </button>
             </div>
         </form>
@@ -313,7 +314,7 @@
 <script rel="script" src="assets/js/lodash.min.js"></script>
 <script rel="script" src="assets/swal/sweetalert2.min.js"></script>
 <script rel="script" src="assets/js/loadingoverlay.min.js"></script>
-<script async rel="script" src="assets/js/app.js?v=1678760002456"></script>
-<script async rel="script" src="assets/js/main.js?v=1678760002456"></script>
+<script async rel="script" src="assets/js/app.js?v=1679036334782"></script>
+<script async rel="script" src="assets/js/main.js?v=1679036334782"></script>
 </body>
 </html>
