--- a/success.html
+++ b/success.html
@@ -8,7 +8,8 @@
     <!-- link css -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <!-- unicons -->
-    <link href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" rel="stylesheet" />
+    <link href="assets/fonts/fontawesome-all.min.css" rel="stylesheet" />
+    <!-- <link href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" rel="stylesheet" /> -->
 
     <title>IWantSeats</title>
     <link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png">
