--- a/user-admin.html
+++ b/user-admin.html
@@ -7,11 +7,12 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <!-- link css -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link href="assets/css/style.css?v=1678760002456" rel="stylesheet" />
-    <link href="assets/css/admin.min.css?v=1678760002456" rel="stylesheet" />
-    <link href="assets/css/table.min.css?v=1678760002456" rel="stylesheet" />
+    <link href="assets/css/style.css?v=1679036334782" rel="stylesheet" />
+    <link href="assets/css/admin.min.css?v=1679036334782" rel="stylesheet" />
+    <link href="assets/css/table.min.css?v=1679036334782" rel="stylesheet" />
     <!-- unicons -->
-    <link href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" rel="stylesheet" />
+    <link href="assets/fonts/fontawesome-all.min.css" rel="stylesheet" />
+    <!-- <link href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" rel="stylesheet" /> -->
 
     <title>IWantSeats</title>
     <link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png">
@@ -35,7 +36,7 @@
                 </div>
             </div>
             <div class="menu" onclick="menu()">
-                <i class="uil uil-align-center-alt"></i>
+                <i class="fas fa-bars"></i>
             </div>
         </div>
     </header>
@@ -88,7 +89,7 @@
                         <!--                    <a href="#"> Change password </a>-->
                     </div>
                     <div class="edit-profile" onclick="edit()">
-                        <i class="uil uil-pen"></i>
+                        <i class="fas fa-pencil"></i>
                     </div>
                 </div>
                 <div class="other-info">
@@ -209,8 +210,8 @@
     <script rel="script" src="assets/js/axios.min.js"></script>
     <script rel="script" src="assets/js/table.min.js"></script>
     <script rel="script" src="assets/js/moment.min.js"></script>
-    <script rel="script" src="assets/js/app.js?v=1678760002456"></script>
-    <script rel="script" src="assets/js/main.js?v=1678760002456"></script>
+    <script rel="script" src="assets/js/app.js?v=1679036334782"></script>
+    <script rel="script" src="assets/js/main.js?v=1679036334782"></script>
 
     <script>
             let loginInfo = JSON.parse(localStorage.getItem('loginInfo'));
@@ -224,8 +225,8 @@
             let userInfo = JSON.parse(localStorage.getItem('userInfo'));
             let pholder = $('.details');
             pholder.html(`<h3 class="name">${userInfo.USERNAME}</h3>
-                   <p><i class="uil uil-envelope"></i>${loginInfo.email}</p>
-                   <p><i class="uil uil-phone"></i>${userInfo.CONTACT_NO}</p>`);
+                   <p><i class="fas fa-envelope"></i>${loginInfo.email}</p>
+                   <p><i class="fas fa-phone"></i>${userInfo.CONTACT_NO}</p>`);
             getHistory();
         })
 
@@ -254,7 +255,7 @@
                 contactNo: $('#contact').val(),
                 gender: "M"
             }
-            //console.log('userdata', data);
+            console.log('userdata', data);
             fetchUpdateProfile(data)
                 .then((res) => {
                     if (res.RESULT === 'SAVED') {
