--- a/test.html
+++ b/test.html
@@ -1,70 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link href="assets/css/style.css?v=1683159031437" rel="stylesheet" />
-    <link href="assets/css/form.min.css" rel="stylesheet" />
-    <title>IWantSeats</title>
-    <link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png" />
-    <link href="assets/swal/sweetalert2.min.css" rel="stylesheet" />
-
-    <!-- unicons -->
-    <link href="assets/fonts/fontawesome-all.min.css" rel="stylesheet" />
-    <!-- <link href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" rel="stylesheet" /> -->
-
 </head>
-
 <body>
-
-    <p id="response"></p>
-    
-
-    <script rel="script" src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script>
-        async function fetchLocationF() {
-            let input =
-                "https://iwsenterprise.com/iwsticketing_v3/iwsapiengine/getfeaturedroutesiws";
-            let response = await fetch(input, {
-                headers: {
-                    'Authorization' : 'Bearer {mp@gmail.com}',
-                    'Content-Type': 'application/json'
-                }
-            });
-            console.log(response.json());
-
-            return await response.json();
-        }
-
-        function getLocationF() {
-            fetchLocationF()
-                .then((data) => {
-                    if (data.length > 0) { 
-                        $('#response').html(data);
-                     }
-                     else{
-                        $('#response').text('no-data');
-                     }
-                })
-                .catch((error) => {
-                    $('#response').html(error);
-        });
-
-        }
-
-        $(document).ready(function(){
-            getLocationF();
-        })
-
-
-    </script>
-
+    Hello..
 </body>
-
 </html>
